# Medha

./: .env.example  langgraph.json  main.py  progress.md  pyproject.toml
src/api/: v1.py
src/graph/: chatbot_graph.py
src/ingestion/: ingest_single_markdown.py  ingestion_pipeline.py  ingestion_pipeline_with_metadata.py
src/langgraph_execs/: chatbot_graph.py
src/llms/: groq_llm.py
src/nodes/: chatbot_node.py  faiss_retriever_node.py  query_reformulator_node.py
src/prompts/: prompt_loader.py
src/prompts/system/main/: v1.md
src/retrievers/: faiss_retriever.py  query_faiss.py
src/runs/: groq_llm_run.py  ingestion_pipeline_run.py  ingestion_pipeline_w_metadata_run.py
src/sandbox/: query_faiss.py  scholar_scrapping.py
src/scrapers/: scholar_scrapper.py  scrap_websites.py
src/scripts/: build_index.py  metadata_generator.py  qa_generator.py  single_metadata_generator.py
src/states/: chatbot_state.py
src/ui/: app.py
src/utils/: logging.py  replace_space_w_hyphen.py
